--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,3 +13,8 @@ dependencies = [
     "python-dotenv==1.0.1"
 ]
 requires-python = ">=3.13"
+
+[dependency-groups]
+dev = [
+    "ruff>=0.11.6",
+]
