Use minimum versions instead

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,12 +6,12 @@ authors = [
     {name = "Shea Williams", email = "shea@cppnow.com"}
 ]
 dependencies = [
-    "Flask==3.1.0",
-    "Flask-SQLAlchemy==3.1.1",
-    "Flask-Login==0.6.3",
+    "Flask>=3.1.0",
+    "Flask-SQLAlchemy>=3.1.1",
+    "Flask-Login>=0.6.3",
     "gunicorn",
-    "Werkzeug==3.1",
-    "python-dotenv==1.0.1",
+    "Werkzeug>=3.1",
+    "python-dotenv>=1.0.1",
     "pytz",
     "sqlalchemy",
 ]
