--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "python-dotenv>=1.0.1",
     "pytz",
     "sqlalchemy",
+    "stripe>=12.0.0",
 ]
 requires-python = ">=3.13"
 
